--- a/src/data/json/projects.json
+++ b/src/data/json/projects.json
@@ -46,8 +46,8 @@
   },
   {
     "id": "project-6",
-    "title": "Weather Dashboard",
-    "description": "A weather application that displays current conditions and forecasts using data from a weather API with location-based searches.",
+    "title": "Autodesk Revit Modeling Project",
+    "description": "I have showcased a selection of my Revit Architecture projects demonstrating proficiency in BIM modeling, custom family creation, sheet setup, and quantity scheduling. These projects also highlight my rendering and visualization skills.",
     "technologies": ["JavaScript", "HTML/CSS", "OpenWeather API"],
     "imageUrl": "/rvt.jpg",
     "demoUrl": "https://weather.example.com",
